--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="description" content='{{site.description}}'>
     <link href="{{ '/assets/main.css' | relative_url }}" rel="stylesheet">
     <script src="{{ '/assets/js/uikit.min.js' | relative_url }}"></script>
   </head>
   <body>
-    {% include navbar.html %}
     {{content}}
   </body>
 </html>
