とりあえず肩に放った

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,5 @@
 <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar">
-  {% include navigation.html %}
+  <nav class="uk-navbar-container" uk-navbar style="position: relative; z-index: 980;">
+    {% include navigation.html %}
+  </nav>
 </div>
