--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,4 +2,7 @@
 layout: default
 ---
 {% include navbar.html %}
-{{content}}
+<div style="min-height:79vh">
+  {{content}}
+</div>
+{% include footer.html %}
