--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
     <meta name="description" content='{{site.description}}'>
     <link href="{{ '/assets/main.css' | relative_url }}" rel="stylesheet">
     <script src="{{ '/assets/js/uikit.min.js' | relative_url }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
   </head>
-  <body>
+  <body style="height:100%;">
     {{content}}
   </body>
 </html>
