--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,22 +1,26 @@
-<nav class="uk-navbar-container" uk-navbar style="position: relative; z-index: 980;">
-  <div class="uk-navbar-left">
-    <a class="uk-navbar-item uk-logo uk-text-bold" href="#">{{site.title}}</a>
-  </div>
-  <div class="uk-navbar-right">
-      <ul class="uk-navbar-nav">
-          <li class="uk-active"><a href="#">Active</a></li>
-          <li>
-              <a href="#">Parent</a>
-              <div class="uk-navbar-dropdown">
-                  <ul class="uk-nav uk-navbar-dropdown-nav">
-                      <li class="uk-active"><a href="#">Active</a></li>
-                      <li><a href="#">Item</a></li>
-                      <li><a href="#">Item</a></li>
-                  </ul>
-              </div>
-          </li>
-          <li><a href="#">Item</a></li>
-      </ul>
-
-  </div>
-</nav>
+<div class="uk-navbar-left" style="user-select: none;">
+  <a class="uk-navbar-item uk-logo uk-text-bold" href="/">{{site.title}}</a>
+</div>
+<div class="uk-navbar-right">
+  <ul class="uk-navbar-nav"style="user-select: none;">
+    <li class="uk-active">
+      <a href="/">
+        Home
+      </a>
+    </li>
+    <li>
+      <a href="/works">
+        Works
+      </a>
+    </li>
+    <li>
+      <a href="/articles">
+        Articles
+      </a>
+    </li>
+      <li><a href="/contact">
+        Contact
+      </a>
+    </li>
+  </ul>
+</div>
