--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,29 +1,24 @@
 ---
-layout: default
+layout: base
 ---
-{% if page.categories %}
-<div class="post-head">
-  <h2>{{page.categories[0] | upcase }}</h2>
-</div>
-{% endif %}
-
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-
-  {% if page.categories[0] == "news" %}
-    <p class="post-date">{{ page.date | date:"%Y.%-m.%-d" }}</p>
-  {% elsif page.categories[0] == "workshop" or page.categories[0] == "session" %}
-    <div class="tags">
-      {% for tag in page.tags %}
-        <span class="tag-post">{{tag}}</span>
-      {% endfor %}
-    </div>
-    <p class="post-time">{{page.time}}</p>
-  {%endif%}
-
-  <div class='post-content mt-5'>
-    {{ content }}
-    <a href="/" class="btn btn-red"><i class="fas fa-chevron-circle-left"></i> トップページに戻る</a>  
+<div class="cp-page-header">
+  <div class="uk-container uk-container-xlarge cp-lh-0">
+    <h3 class="inside-cp-header uk-text-bold">{{page.title}}</h3>
+    <p class="inside-cp-header-subt uk-text-bold">
+      作成日：{{ page.date| date: "%Y年%m月%d日"  }}
+      &nbsp;
+      {% if page.date %}
+      最終更新日：{{ page.upddate| date: "%Y年%m月%d日"  }}
+      {% endif %}
+    </p>
+    {% for tag in site.tags %}
+    <span class="uk-badge">{{tag[0]}}</span>
+    {% endfor %}
   </div>
-
 </div>
+<div style="height:2em;"></div>
+<div class="uk-container uk-container-xlarge cp-lh-1">
+  {{ content }}
+</div>
+<div style="height:2em;"></div>
+
