とりあえずの完成

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="cp-footer" style="height:13vh">
   <div class="uk-container uk-container-xlarge">
     <div style="height:2em;"></div>
-    <a href='{{site.url}}/' style="text-decoration: none;">
+    <a href='{{site.url}}/' class="uk-text-secondary" style="text-decoration: none;">
     <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In  -->
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="178.7px"
-    height="61px" viewBox="0 0 178.7 61" style="overflow:visible;enable-background:new 0 0 178.7 61;" xml:space="preserve">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="95px"
+    height="40px" viewBox="0 0 178.7 61" style="overflow:visible;enable-background:new 0 0 178.7 61;" xml:space="preserve">
     <defs>
     </defs>
     <g>
@@ -73,7 +73,6 @@
     <path d="M152.5,57.9c-1,0-1.6-0.5-1.6-1.6v-8.1h1.6v7.8c0,0.5,0.2,0.6,0.6,0.6h0.4v1.2H152.5z"/>
     </g>
     </svg>
-
-    </a>
-  <div style="height:2em;"></div>
+  </a>
+    <p style="user-select: none;">©️{{ "now" | date: "%Y" }} Natom.work Administrators All rights reserved. All copyrights of contents on this site without indication belong to the site owner.</p>
 </footer>
