--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,15 @@
 ---
 layout: base
 ---
-<div class="cp-page-header">
-  <div class="uk-container uk-container-xlarge cp-lh-0">
-    <h3 class="inside-cp-header uk-text-bold">{{page.title}}</h3>
+<section class="main uk-animation-fade">
+  <div class="cp-page-header">
+    <div class="uk-container uk-container-xlarge cp-lh-0">
+      <h3 class="inside-cp-header uk-text-bold">{{page.title}}</h3>
+    </div>
   </div>
-</div>
-<div style="height:2em;"></div>
-<div class="uk-container uk-container-xlarge cp-lh-1">
-  {{ content }}
-</div>
-<div style="height:2em;"></div>
+  <div style="height:2em;"></div>
+  <div class="uk-container uk-container-xlarge cp-lh-1">
+    {{ content }}
+  </div>
+  <div style="height:2em;"></div>
+</section>
