--- a/_sass/components/variables.scss
+++ b/_sass/components/variables.scss
@@ -38,7 +38,7 @@ $breakpoint-large-max:                          ($breakpoint-xlarge - 1) !defaul
 // Typography
 //
 
-$global-font-family: "ヒラギノUD角ゴ W5 JIS2004", "Hiragino UD Sans W5 JIS2004", "ヒラギノUD角ゴ StdN", alber-new-web, sans-serif !default;
+$global-font-family: "ヒラギノUD角ゴ W5 JIS2004", "Hiragino UD Sans W5 JIS2004", "ヒラギノUD角ゴ StdN", "Hiragino Sans GB W3" , "Hiragino Sans GB", alber-new-web, sans-serif !default;
 $global-font-size:                               16px !default;
 $global-line-height:                             1.5 !default;      // 24px
 
