--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -79,7 +79,7 @@ $inverse-global-inverse-color: $global-color !default;
 $inverse-badge-color: $inverse-global-inverse-color !default;
 $inverse-badge-hover-color: $inverse-global-inverse-color !default;
 $base-body-background: $global-background !default;
-$global-font-family: "ヒラギノUD角ゴ W5 JIS2004", "Hiragino UD Sans W5 JIS2004", "ヒラギノUD角ゴ StdN", alber-new-web, sans-serif !default;
+$global-font-family: "ヒラギノUD角ゴ W5 JIS2004", "Hiragino UD Sans W5 JIS2004", "ヒラギノUD角ゴ StdN", "Hiragino Sans GB W3" , "Hiragino Sans GB", alber-new-web, sans-serif !default;
 $base-body-font-family: $global-font-family !default;
 $base-body-font-weight: normal !default;
 $global-font-size: 16px !default;
