--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
     <link href="{{ '/assets/main.css' | relative_url }}" rel="stylesheet">
     <script src="{{ '/assets/js/uikit.min.js' | relative_url }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
+    <script type="text/javascript" src="//typesquare.com/3/tsst/script/ja/typesquare.js?5ff6acfe3d584e62aab52866e90393a3&fadein=5" charset="utf-8"></script>
   </head>
   <body style="height:100%;">
     {{content}}
