--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,7 +12,7 @@ html{
 }
 
 .uk-text-bold, b, h1, h2{
-  font-family: "ヒラギノUD角ゴ w6 JIS2004", "Hiragino UD Sans w6 JIS2004", "ヒラギノUD角ゴ StdN", sans-serif;
+  font-family: "ヒラギノUD角ゴ W6 JIS2004", "Hiragino UD Sans W6 JIS2004", "ヒラギノUD角ゴ StdN", sans-serif;
   font-weight: 700;
 }
 
