--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     <meta property="og:image" content="{{ '/assets/img/ogp.png' | relative_url }}" />
     {% endif %}
     <meta name="twitter:card" content="Summary Card" />
-    <meta name="twitter:site" content="@_nilnil_" />
+    <meta name="twitter:site" content="@designnoam" />
     <link href="{{ '/assets/main.css' | relative_url }}" rel="stylesheet">
     <script src="{{ '/assets/js/uikit.min.js' | relative_url }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
