--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -75,4 +75,5 @@
     </svg>
   </a>
     <p style="user-select: none;">©️{{ "now" | date: "%Y" }} Natom.work Administrators All rights reserved. All copyrights of contents on this site without indication belong to the site owner.</p>
+    <p>For non-Japanese speakers, we provide only Japanese page. If you need, please find the translator by yourself. The cost for the translation will be charged not to the website owner.</p>
 </footer>
