--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="cp-footer" style="height:13vh">
   <div class="uk-container uk-container-xlarge">
-    <div style="height:2em;"></div>
+    <div style="min-height:2em;"></div>
     <a href='{{site.url}}/' class="uk-text-secondary" style="text-decoration: none;">
     <!-- Generator: Adobe Illustrator 25.0.1, SVG Export Plug-In  -->
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="95px"
